HelloUltraviolet/Fixtures/RejectedSource/Procedures/ContractEntryOutsidePostcondition/Expected.uv
//! Expected diagnostic metadata for the ContractEntryOutsidePostcondition rejected-source specimen.

expectedDiagnostic("E-SEM-2852", "req.15.ContractEntryConstraints")
